# swagger.json
@@ -224,113 +224,9 @@
           "password"
         ]
       },
-      "AnimeReleaseItem": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number",
-            "example": 1,
-            "description": "ID аниме"
-          },
-          "title": {
-            "type": "string",
-            "example": "Наруто",
-            "description": "Название аниме"
-          },
-          "poster": {
-            "type": "string",
-            "example": "naruto.jpg",
-            "description": "Постер"
-          },
-          "release_date": {
-            "type": "string",
-            "example": "2024-04-01",
-            "description": "Дата выхода"
-          }
-        },
-        "required": [
-          "id",
-          "title",
-          "poster",
-          "release_date"
-        ]
-      },
-      "PaginationLinks": {
-        "type": "object",
-        "properties": {
-          "previous": {
-            "type": "object",
-            "nullable": true
-          },
-          "next": {
-            "type": "object",
-            "nullable": true
-          }
-        },
-        "required": [
-          "previous",
-          "next"
-        ]
-      },
-      "Pagination": {
-        "type": "object",
-        "properties": {
-          "total": {
-            "type": "number"
-          },
-          "count": {
-            "type": "number"
-          },
-          "per_page": {
-            "type": "number"
-          },
-          "current_page": {
-            "type": "number"
-          },
-          "total_pages": {
-            "type": "number"
-          },
-          "links": {
-            "$ref": "#/components/schemas/PaginationLinks"
-          }
-        },
-        "required": [
-          "total",
-          "count",
-          "per_page",
-          "current_page",
-          "total_pages",
-          "links"
-        ]
-      },
-      "AnimeMeta": {
-        "type": "object",
-        "properties": {
-          "pagination": {
-            "$ref": "#/components/schemas/Pagination"
-          }
-        },
-        "required": [
-          "pagination"
-        ]
-      },
       "AnimeReleasesResponse": {
         "type": "object",
-        "properties": {
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnimeReleaseItem"
-            }
-          },
-          "meta": {
-            "$ref": "#/components/schemas/AnimeMeta"
-          }
-        },
-        "required": [
-          "data",
-          "meta"
-        ]
+        "properties": {}
       }
     }
   }
